@@ -4,9 +4,9 @@
 -ea
 -Xmx4g
 -Xms2g
--XX:+UseG1GC
--XX:-UseParNewGC
--XX:-UseConcMarkSweepGC
+-XX:-UseG1GC
+-XX:+UseParNewGC
+-XX:+UseConcMarkSweepGC
 -XX:ReservedCodeCacheSize=256m
 -XX:-OmitStackTraceInFastThrow
 -Dsun.io.useCanonCaches=false
